@@ -1,3 +1,6 @@
 Changelogs :
-- merge 4.14.188
-- enable LTO
+- merge LA.UM.8.1.r1-15400-sm8150.0
+- merge LA.UM.8.1.r1-15400-sm8150.0 qcacld-3.0
+- merge LA.UM.8.1.r1-15400-sm8150.0 techpack/data
+- relax down_rate_limit for more battery
+- some sched commits
